--- a/index.ipynb
+++ b/index.ipynb
@@ -34,13 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ART VANDELAY'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"art vandelay\" # \"ART VANDELAY\""
+    "\"art vandelay\".upper() # \"ART VANDELAY\""
    ]
   },
   {
@@ -56,11 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ART VANDELAY'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art vandelay\".upper() # 'ART VANDELAY'"
    ]
@@ -76,14 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "Art Vandelay\n",
+      "Art Vandelay\n"
+     ]
+    }
+   ],
    "source": [
     "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
-    "art_vandelay"
+    "print(type(art_vandelay))\n",
+    "Art_Vandelay = art_vandelay[0].capitalize()+art_vandelay[1:4].lower()+art_vandelay[4:13].capitalize()\n",
+    "print(Art_Vandelay)\n",
+    "print(art_vandelay[0:4].capitalize()+art_vandelay[4:13].capitalize())"
    ]
   },
   {
@@ -95,14 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CEO'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ceo = \"Ceo\" # 'CEO'\n",
-    "ceo"
+    "ceo.upper()"
    ]
   },
   {
@@ -114,14 +152,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ends_with_com = \"art.vandelay@vandelay.co\" # False\n",
-    "ends_with_com"
+    "ends_with_com.endswith('.com')"
    ]
   },
   {
@@ -133,15 +180,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www.vandelay.com\n"
+     ]
+    }
+   ],
    "source": [
     "web_address = 'vandelay.com' # 'www.vandelay.com'\n",
-    "web_address"
+    "print('www.'+web_address)"
    ]
   },
   {
@@ -155,26 +209,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7285553335\n"
+     ]
+    }
+   ],
    "source": [
     "phone_num_one = \"7285553334\" # 7285553335\n",
-    "phone_num_one "
+    "print(int(phone_num_one)+1) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7285553336\n"
+     ]
+    }
+   ],
    "source": [
     "phone_num_two = \"7285553334\" # 7285553336\n",
-    "phone_num_two"
+    "print(int(phone_num_two)+2) "
    ]
   },
   {
@@ -203,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
