Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,8 +110,8 @@
    "source": [
     "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
     "print(type(art_vandelay))\n",
-    "Ar\n",
-    "print(art_vandelay[0:4].capitalize()+art_vandelay[4:13].capitalize())"
+    "print(art_vandelay[0:4].capitalize()+art_vandelay[4:13].capitalize())\n",
+    "print"
    ]
   },
   {
