--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
     "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
     "print(type(art_vandelay))\n",
     "print(art_vandelay[0:4].capitalize()+art_vandelay[4:13].capitalize())\n",
-    "print"
+    "print(art_vandelay)"
    ]
   },
   {
