Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
     "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
     "print(type(art_vandelay))\n",
     "print(art_vandelay[0:4].capitalize()+art_vandelay[4:13].capitalize())\n",
-    "print(art_vandelay)"
+    "print(art_vandelay.title())"
    ]
   },
   {
